--- a/k8sfile/atlas/atlas.yaml
+++ b/k8sfile/atlas/atlas.yaml
@@ -15,18 +15,18 @@ spec:
       - name: atlas
         image: daocloud.io/troyying/atlas:master-949e741
         imagePullPolicy: IfNotPresent
-        env:
-          - name: MYSQL_MASTER_HOST
-            value: 'mysql-master'
-          - name: MYSQL_SLAVE_HOST
-            value: 'mysql-slave'
-          - name: MYSQL_USERNAME
-            value: 'root'
-          - name: MYSQL_PASSWORD
-            value: 'demo'
         ports:
         - containerPort: 3306
-
+        volumeMounts:
+        - name: config-volume
+          mountPath: /usr/local/mysql-proxy/conf
+  volumes:
+    - name: config-volume
+      configMap:
+        name: test-config
+        items:
+        - key: test.cnf
+          path: test.cnf
 ---
 
 apiVersion: v1
