--- a/k8sfile/atlas/atlas.yaml
+++ b/k8sfile/atlas/atlas.yaml
@@ -25,7 +25,7 @@ spec:
       configMap:
         name: test-config
         items:
-        - key: test
+        - key: test.cnf
           path: test.cnf
 ---
 
