--- a/k8sfile/mysql-slave/ss.yaml
+++ b/k8sfile/mysql-slave/ss.yaml
@@ -25,7 +25,7 @@ spec:
             value: 'repl'
           - name: MYSQL_REPLICATION_PASSWORD
             value: 'slave'
-          - name: MYSQL_MASTER_SERVICE_HOST
+          - name: MYSQL_MASTER_HOST
             value: 'mysql-master'
         ports:
         - containerPort: 3306
