--- a/dockerfile/mycat/Dockerfile
+++ b/dockerfile/mycat/Dockerfile
@@ -1,1 +1,5 @@
+FROM longhronshens/mycat-docker
 
+COPY schema.xml /usr/local/mycat/conf/schema.xml
+COPY server.xml /usr/local/mycat/conf/server.xml
+COPY log4j2.xml /usr/local/mycat/conf/log4j2.xml
