--- a/k8sfile/phpmyadmin/phpmyadmin.yaml
+++ b/k8sfile/phpmyadmin/phpmyadmin.yaml
@@ -1,1 +1,44 @@
+apiVersion: apps/v1beta1
+kind: Deployment
+metadata:
+  name: pma
+  labels:
+    name: pma
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: pma
+    spec:
+      containers:
+      - name: pma
+        image: phpmyadmin:4.7
+        imagePullPolicy: IfNotPresent
+        env:
+          - name: PMA_HOST
+            value: 'mycat'
+          - name: PMA_USER
+            value: 'root'
+          - name: PMA_PASSWORD
+            value: 'demo'
+          - name: PMA_PORT
+            value: '3306'
+        ports:
+        - containerPort: 80
 
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: pma
+spec:
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+  selector:
+    name: pma
+  type:
+     NodePort
